<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/matrix" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/amaranth"
            android:text="Walter Singer"
            android:textColor="#fffdfd"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="34sp"
            android:text="@string/textTit"
            android:textColor="#fffdfd"
            android:textSize="18sp" />

    </android.support.v7.widget.CardView>


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/profile"
        app:civ_border_color="#747272"
        android:elevation="6dp"
        app:civ_border_width="2dp"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/profile">


        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            app:tabMode="scrollable"
            android:background="@color/tabNav">

            <android.support.design.widget.TabItem
                android:id="@+id/id_tab_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_perfil" />

            <android.support.design.widget.TabItem
                android:id="@+id/id_tab_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_exp" />

            <android.support.design.widget.TabItem
                android:id="@+id/id_tab_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_habilidades" />

            <android.support.design.widget.TabItem
                android:id="@+id/id_tab_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_contacto" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp">

        </android.support.v4.view.ViewPager>

    </android.support.design.widget.CoordinatorLayout>

    <Button
        android:id="@+id/button_getintouch"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/textButton"
        android:text="@string/string_get_in_touch"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableStart="@drawable/ic_local_phone"

        />


</android.support.constraint.ConstraintLayout>